# headroom-recursion

./: .gitignore  .importlinter  .pre-commit-config.yaml  .scrapling_version_check.py  .version_check.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  LICENSE  NOTICE  README.md  RECOVERY.md  RUNBOOK.md  SECURITY.md  SKILL.md  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.dev-logs/: worker.err
adapters/: _registry.json
adapters/bing_visual_reverse/: wrapper.py
adapters/ghunt/: LICENSE  README.md  pyproject.toml  wrapper.py  wrapper_real.py  wrapper_with_real_import.py
adapters/google_lens_reverse/: wrapper.py
adapters/google_serp_linkedin/: wrapper.py
adapters/google_serp_phone/: wrapper.py
adapters/instagram_followers/: wrapper.py
adapters/instagram_public/: wrapper.py
adapters/linkedin/: wrapper.py
adapters/maigret/: wrapper.py
adapters/partial_recovery/: wrapper.py
adapters/rocketreach/: wrapper.py
adapters/tiktok_followers/: wrapper.py
adapters/tiktok_public/: wrapper.py
adapters/tineye/: wrapper.py
adapters/true_people_search/: wrapper.py
adapters/twitter_followers/: wrapper.py
adapters/twitter_public/: wrapper.py
adapters/twstalker/: wrapper.py
adapters/user_scanner/: wrapper.py
adapters/yandex_image_reverse/: wrapper.py
apps/api/: pyproject.toml
apps/api/osint_goblin_api/: main.py
apps/api/src/osint_goblin_api/: __init__.py  broker.py  files.py  main.py  models.py  routes.py  store.py
apps/api/tests/: conftest.py  test_files.py  test_health.py  test_investigations.py  test_sse.py
apps/web/: next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/workers/: pyproject.toml
apps/workers/osint_goblin_workers/: __main__.py
apps/workers/src/osint_goblin_workers/: __init__.py  __main__.py  _ua.py  adapters.py  adapters_badges.py  adapters_domain.py  adapters_dork.py  adapters_identity.py  adapters_image.py  adapters_ip.py  adapters_listing.py  adapters_phone.py  adapters_property.py  broker.py  ephemeral.py  humanize.py  passthru.py  publisher.py  subprocess_adapter.py  tool_runner.py  workflow_runner.py  workflows.py
apps/workers/tests/: conftest.py  test_adapters_badges.py  test_adapters_dork.py  test_adapters_image_pdq.py  test_adapters_listing.py  test_adapters_property.py  test_ephemeral.py  test_humanize.py  test_image_ai_local_detect.py  test_maigret_adapter.py  test_passthru.py  test_subprocess_adapter.py  test_tool_runner.py  test_workflow_output_mapping.py
docs/: UPGRADE-PATH.md  feynman-headless-issue-draft.md
docs/adr/: 0000-adr-template.md  0001-monorepo-sock-evidence-isolation.md  0002-scrapling-fetch-primitive.md  0003-dramatiq-redis-tool-runner.md  0004-followthemoney-entity-model.md  0005-postgres-age-pgvector.md  0006-agpl-subprocess-containment.md  0007-six-verbs-attest.md  0008-evidence-package-m1.md  0009-fetch-tier-cost-weighted-governor.md  0010-sock-account-encrypted-db-separation.md  0011-embedded-captcha-tab.md  0012-bounded-reaffirmation-chain.md  0013-tier-aware-loading-shapes.md  0014-opsec-tile-hovercard-rich-data.md  0015-real-name-leak-sheet-dim-freeze.md  0016-followthemoney-properties-ext-escape-hatch.md  0017-cmd-k-palette-spec.md  0018-evidence-pipeline-split-deferral.md  0022-import-linter-dag-enforcement.md  0023-adapter-package-location.md  0026-dossier-section-rubric-coverage-lint.md  0027-risk-score-primitive-scope.md  0028-fingerprint-primitive-scope.md  0029-doctrine-pivot-signal-correlation-engine.md  0030-ip-intel-reference-databases.md  README.md
docs/security/: target-data-handling-policy.md
examples/: aimo_benchmark.py  complexity-bibliography.txt  run_sudoku.md  shannon_lower_bound.lean
infra/scripts/: fetch_ip_refdata.py
infra/vagrant/: README.md  Vagrantfile  bootstrap-host.ps1  provision.sh
infra/wsl/: README.md  provision_root.sh  provision_user.sh
lean/: lake-manifest.json  lakefile.toml
lean/LeanOracle/: Smoke.lean
references/: headroom-setup.md  lightrag-setup.md  oracle-compiler.md  paper-mapping.md
runs/: FINDINGS.md  README.md  campaign-summary.json  campaign_report.md  heartbeat.json  pvnp-ledger.json  run-000.json  run-000.summary.txt  run-001.json  run-001.summary.txt  run-002.json  run-002.summary.txt
runs/lean/: gate-01c5cb588f9f.lean  gate-03abfb9fc59b.lean  gate-1b7d5fc9b679.lean  gate-264ea5cb8bc0.lean  gate-3e4d9e66a8db.lean  gate-403a9b0c80bd.lean  gate-4209a5a2e3e3.lean  gate-7d507510cd5e.lean  gate-d70b594e9151.lean
runs/verify/: A02da22666420.ndjson  A58abeb7d4e7f.ndjson  Ab7f46b551dc2.ndjson  Acb02e48b76b6.ndjson  Ad49ca6bb55cf.ndjson  report.json
scripts/: .day-1-scaffold-cmdk-attest.py  .day-2-scaffold-pages.py  install_lean.sh  start-dev.ps1  start-dev.sh  verify_artifacts.py
src/headroom_recursion/: __init__.py  batch.py  campaign.py  claims.py  claude.py  cli.py  clients.py  competition.py  config.py  doctor.py  halting.py  headroom.py  heartbeat.py  ladder.py  lean_oracle.py  ledger.py  oracle.py  prompts.py  retrieval.py  trace.py  trm.py
tasks/: lessons.md  todos.md
tests/: conftest.py  test_batch.py  test_campaign.py  test_cli_deps.py  test_clients.py  test_config.py  test_doctor.py  test_halting.py  test_hardening.py  test_headroom.py  test_ladder.py  test_lean_oracle.py  test_oracle.py  test_provable.py  test_retrieval.py  test_transport.py  test_trm_loop.py
tests/agpl_containment/: conftest.py  test_agpl_import_lint.py  test_module_dag_lint.py  test_ps1_ascii_lint.py  test_rubric_coverage_lint.py  test_runtime_and_property.py
tests/golden_path_e2e/: cmdk_ranking_fixture.json  test_cmdk_ranking.py
tests/integration/: test_bridge_pubsub.py  test_sse_live.py
tests/unit/: test_verdict_synthesizer.py
tools/: feynman_pty.py
tools/ci/: agpl_import_lint.py  llm_import_lint.py  module_dag_lint.py  ps1_ascii_lint.py  rubric_coverage_lint.py  run_import_linter.py
tools/dev/: bridge_soak.py  dork-live-probe-baidu.py  dork-live-probe-bing.py  dork-live-probe-naver.py  dork-live-probe-yandex.py  dork-live-probe.py  dramatiq_soak.py  smoke.py  (+13 more)
(+63 files in other folders)
