[project]
name = "osint-goblin"
version = "2026.05.0"
description = "OSINT Goblin — FOSS-first OSINT investigation dashboard (workspace root)."
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }  # ADR-0009-tbd / MANUFACTURING-PLAN §2.2

[tool.uv.workspace]
members = [
  "packages/osint_goblin_schemas",
  "packages/osint_goblin_forensics",
  "packages/osint_goblin_db",
  "packages/osint_goblin_ftm",
  "packages/osint_goblin_opsec",
  "packages/osint_goblin_fetcher",
  "packages/osint_goblin_adapters",
  "packages/osint_goblin_attestation",
  "packages/osint_goblin_evidence_pipeline",
  "apps/api",
  "apps/workers",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13,<2",       # mypy 2.0 dropped some strict-mode behaviors; revisit Sprint 7+
  "pytest>=8,<10",       # pin band; pytest 9 fine, pytest 10+ revisit
  "pytest-asyncio>=0.24",
  "hypothesis>=6.100",   # Day 7 forensics tests use property-based fuzz
  "httpx>=0.27",         # FastAPI TestClient + AsyncClient
  "import-linter>=2.0",  # Sora P1 phase6 / ADR-0022 -- DAG + Independence contracts
  "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "adapters"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "SIM"]

[tool.mypy]
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
# Yuki P0 / Phase 6 2026-05-11: importmode=importlib resolves test modules by
# filesystem path via importlib.util.spec_from_file_location, so duplicate
# basenames (test_health.py in apps/api/tests AND apps/workers/tests) no
# longer collide on module name. Required for cross-package `pytest` from
# workspace root. The existing `tests/__init__.py` markers in forensics +
# fetcher + tests/agpl_containment are no longer load-bearing and should be
# dropped in the same change (see follow-up commit).
minversion = "8"
# --import-mode=importlib resolves test modules by filesystem path (not module
# name) so duplicate basenames across packages don't collide. This is the
# canonical fix for cross-package pytest collection in src-layout monorepos.
addopts = "-ra --strict-markers --strict-config --import-mode=importlib"
testpaths = ["packages", "apps", "tests"]
asyncio_mode = "auto"
markers = [
    "slow: long-running tests; excluded from <5min fast loop",
    "real_network: hits real external endpoints; weekly only",
    "postgres: requires live Postgres (Docker Compose)",
    "agpl_subprocess: exercises the AGPL subprocess boundary",
]
