[project]
name = "headroom-recursion"
version = "0.1.0"
description = "Recursive-reasoning harness for Claude — a TRM-style draft/refine/escalate loop with Headroom context compression across all Claude model tiers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "headroom-recursion contributors" }]
keywords = ["claude", "anthropic", "reasoning", "recursion", "headroom", "trm"]

dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Headroom context compression. Optional so the loop runs (uncompressed) without it.
headroom = ["headroom-ai[all]>=0.1"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
recurse = "headroom_recursion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom_recursion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
