[project]
name = "headroom-recursion"
version = "0.1.0"
description = "Recursive reasoning harness for Claude. A small model refines its answer in a loop; larger models take over only when it stalls. Based on arXiv:2510.04871."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "headroom-recursion contributors" }]
keywords = ["claude", "anthropic", "reasoning", "recursion", "headroom", "trm"]

dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
# Headroom context compression. Optional so the loop runs (uncompressed) without it.
headroom = ["headroom-ai[all]>=0.1"]
# LightRAG retrieval layer. Optional; the loop runs ungrounded without it. Note you
# must also supply an embedding backend (see references/lightrag-setup.md).
lightrag = ["lightrag-hku>=1.0"]
# OpenAI (and OpenAI-compatible: Ollama, vLLM, LM Studio, ...) model backend.
openai = ["openai>=1"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
recurse = "headroom_recursion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom_recursion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
