[project]
name = "osint-goblin-api"
version = "2026.05.0"
description = "OSINT Goblin -- FastAPI + Pydantic v2 + SSE backend."
requires-python = ">=3.11,<3.14"
dependencies = [
  "osint-goblin-schemas",
  "osint-goblin-forensics",
  "fastapi>=0.115",
  "pydantic>=2.9",
  "sse-starlette>=2.1",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
test = ["httpx>=0.27", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_goblin_api"]

[tool.uv.sources]
osint-goblin-schemas = { workspace = true }
osint-goblin-forensics = { workspace = true }
