[project]
name = "osint-goblin-workers"
version = "2026.05.0"
description = "OSINT Goblin -- Dramatiq actors + tool_runner dispatch."
requires-python = ">=3.11,<3.14"
dependencies = [
  "osint-goblin-schemas",
  "osint-goblin-forensics",
  "osint-goblin-fetcher",
  "dramatiq[redis]>=2.1",
  "redis>=5",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_goblin_workers"]

[tool.uv.sources]
osint-goblin-schemas = { workspace = true }
osint-goblin-forensics = { workspace = true }
osint-goblin-fetcher = { workspace = true }
