[project]
name = "osint-goblin-workers"
version = "2026.05.0"
description = "OSINT Goblin -- Dramatiq actors + tool_runner dispatch."
requires-python = ">=3.11,<3.14"
dependencies = [
  "osint-goblin-schemas",
  "osint-goblin-forensics",
  "osint-goblin-fetcher",
  "dramatiq[redis]>=2.1",
  "redis>=5",
  "pydantic>=2.9",
  "httpx>=0.27",                  # property adapters fetch external services
  # Image-analysis adapter deps (Sprint 3+):
  "pillow>=11.0",                 # image flip + ELA + EXIF parsing baseline
  "numpy>=2.0",                   # ELA pixel-difference math
  "exifread>=3.0",                # deeper EXIF than Pillow alone (still in-process)
  "imagehash>=4.3",               # pHash dedupe across an investigation (Tomas gap)
  "pdqhash>=0.2.5",               # PDQ via Facebook ThreatExchange (W4-PDQ-PIPE; BSD-3, <10ms)
  "phonenumbers>=9.0",            # libphonenumber port for W3.ph (Sprint-4 phone-vet)
  # International dork-sweep engines (Ship 4 of OSINT-WEAPON-2026-05-15):
  "beautifulsoup4>=4.14",         # DOM parsing for React-rendered SERPs (Naver, future engines)
  "scrapling>=0.4.8",              # 3-tier fetcher facade (curl_cffi + Patchright + Camoufox)
  "curl_cffi>=0.15",                # tier-1 TLS-impersonation (Chrome JA3/JA4 replay)
  "patchright>=1.59",               # tier-3 anti-detection Playwright fork
  "playwright>=1.59",               # tier-3 browser driver (StealthyFetcher dep)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osint_goblin_workers"]

[tool.uv.sources]
osint-goblin-schemas = { workspace = true }
osint-goblin-forensics = { workspace = true }
osint-goblin-fetcher = { workspace = true }
